Added new panels for Instructor

--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,6 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>18</maven.compiler.source>
         <maven.compiler.target>18</maven.compiler.target>
-        <exec.mainClass>com.blackflower.curriculumcreator.CurriculumCreator</exec.mainClass>
+        <exec.mainClass>com.blackflower.curriculumcreator.MainFrame</exec.mainClass>
     </properties>
 </project>
